...
@Composable
fun ServingsScreen(
    navigationActions: NavigationActions
    // Add any required parameters here, e.g., viewModel: RecipesViewModel
) {
    Scaffold(
        modifier = Modifier.testTag("servingsScreen"),
        topBar = {
            TopAppBar(
                colors = TopAppBarDefaults.topAppBarColors(
                    containerColor = MaterialTheme.colorScheme.secondaryContainer,
                    titleContentColor = MaterialTheme.colorScheme.onSecondaryContainer,
                    navigationIconContentColor = MaterialTheme.colorScheme.onSecondaryContainer
...
            )
        },
        floatingActionButton = {
            androidx.compose.material3.FloatingActionButton(
                onClick = { /* Navigate to the next screen or perform an action */ },
                modifier = Modifier
                    .testTag("nextFab")
                    .padding(horizontal = 16.dp)
                    .height(48.dp)
                    .width(120.dp), // Adjust to desired dimensions
                shape = MaterialTheme.shapes.medium, // Use a slightly rounded rectangular shape
                containerColor = MaterialTheme.colorScheme.primary,
                contentColor = MaterialTheme.colorScheme.onPrimary
...
